--- a/src/index.less
+++ b/src/index.less
@@ -1,4 +1,6 @@
+@import 'icons';
 @import 'variables';
+
 @import 'button/button';
 @import 'checkbox-table/checkbox-table';
 @import 'dialog/dialog';
@@ -21,4 +23,3 @@
 @import 'tree/tree';
 @import 'violation/violation';
 
-@import "icons";
