--- a/src/textarea/textarea.less
+++ b/src/textarea/textarea.less
@@ -7,5 +7,9 @@
             outline: none;
             border-color: @success;
         }
+        &[disabled] {
+            background: @gray-light;
+            cursor: not-allowed;
+        }
     }
 }
