--- a/src/two-box-multiselect/two-box-multiselect.less
+++ b/src/two-box-multiselect/two-box-multiselect.less
@@ -75,6 +75,12 @@
                     cursor: pointer;
                     user-select: none;
                 }
+
+                &.disabled {
+                    .item {
+                        cursor: not-allowed;
+                    }
+                }
             }
         }
     }
@@ -112,6 +118,10 @@
 
                 &:focus {
                     outline: none;
+                }
+
+                &.disabled {
+                    cursor: not-allowed;
                 }
             }
 
