--- a/src/select/select.less
+++ b/src/select/select.less
@@ -16,6 +16,10 @@
         outline: none;
     }
 
+    .disabled {
+        cursor: not-allowed;
+    }
+
     .select-option-toggle {
         height: 34px;
         width: 100%;
@@ -70,7 +74,6 @@
             border: none;
             box-shadow: none;
         }
-        
         .select-filter-icon {
             @two-box-filter-icon();
             font-size: 14px;
