--- a/src/topbar/topbar.less
+++ b/src/topbar/topbar.less
@@ -25,5 +25,13 @@
     .right {
         height: 100%;
         display: flex;
+
+        .topbar-icon {
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            margin: 0 10px;
+            font-size: 18px;
+        }
     }
 }
