--- a/src/table/table.less
+++ b/src/table/table.less
@@ -16,6 +16,7 @@
         &[disabled] {
             color: @gray-light;
             cursor: not-allowed;
+            pointer-events: none
         }
 
         &:hover:not([disabled]) {
