Toggle remake, new design for Table, small changes on buttons

--- a/src/button/button.less
+++ b/src/button/button.less
@@ -1,12 +1,12 @@
 .btn {
     min-width: 85px;
-    padding: 8px 14px;
+    padding: 10px 18px;
     border: 1px solid transparent;
 
     touch-action: manipulation;
     font-size: 12px;
     line-height: 12px;
-    font-weight: normal;
+    font-weight: 600;
     cursor: pointer;
     transition: background-color 300ms ease-out;
     white-space: nowrap;
