Code formatting + prepend/append style update

--- a/src/input/input.less
+++ b/src/input/input.less
@@ -2,13 +2,10 @@
     display: flex;
 
     .prepend-append {
-        background-color: @gray-mid;
+        background-color: transparent;
         line-height: 32px;
         font-size: 12px;
-        border: 1px solid @gray-dark;
-        border-right: 0;
-        padding-left: 10px;
-        padding-right: 10px;
+        padding-right: 5px;
         color: @gray-darkest;
         cursor: default;
         white-space: nowrap;
