new style for radio-group component

--- a/src/button/button.less
+++ b/src/button/button.less
@@ -41,7 +41,7 @@
 
 .btn-secondary {
     .btn();
-    background-color: transparent;
+    background-color: @white;
     border-color: @info-dark;
     color: @info-dark;
 }
