--- a/src/topbar/topbar.less
+++ b/src/topbar/topbar.less
@@ -45,6 +45,22 @@
                 padding: 2px 5px;
                 border: 1px solid @gray-coal;
             }
+
+            &.selected {
+                color: @success;
+
+                &:after {
+                    content: '';
+                    position: absolute;
+                    left: 14%;
+                    bottom: -2px;
+                    width: 0;
+                    height: 0;
+                    border-left: 7px solid transparent;
+                    border-right: 7px solid transparent;
+                    border-bottom: 7px solid @gray-stone;
+                }
+            }
         }
     }
 }
