shadow for form elements + new style for disabled button

--- a/src/button/button.less
+++ b/src/button/button.less
@@ -33,8 +33,9 @@
     }
 
     &[disabled] {
-        background-color: @gray-light;
-        color: @white;
+        background-color: @info-lighter;
+        color: @gray-light;
+        border: 1px solid @info-lighter;
         transition: background-color 300ms ease-out;
     }
 }
