--- a/src/variables.less
+++ b/src/variables.less
@@ -14,6 +14,7 @@
 @success-dark: #6F8D2B;
 
 @info-light: #E4F3FF;
+@info-lighter: #8CC4E0;
 @info: #28B7FF;
 @info-dark: #0592D9;
 @info-darker: #0077B3;
