Form updates + other components (radio-group, button) (#26)
* Update design of the form, change expand/collapse behaviour

* Code formatting + prepend/append style update

* center form buttons and reduce border size for the section header

* new style for radio-group component

* shadow for form elements + new style for disabled button

* Review: empty string

* Review: toggle classes instead of doing conditional rendering

* fix failing build

--- a/src/button/button.less
+++ b/src/button/button.less
@@ -33,15 +33,16 @@
     }
 
     &[disabled] {
-        background-color: @gray-light;
-        color: @white;
+        background-color: @info-lighter;
+        color: @gray-light;
+        border: 1px solid @info-lighter;
         transition: background-color 300ms ease-out;
     }
 }
 
 .btn-secondary {
     .btn();
-    background-color: transparent;
+    background-color: @white;
     border-color: @info-dark;
     color: @info-dark;
 }
