--- a/src/form/form.less
+++ b/src/form/form.less
@@ -28,6 +28,9 @@
 
 .form-group {
     margin-bottom: 15px;
+    label {
+        font-weight: normal;
+    }
 }
 
 .form-control {
@@ -38,6 +41,6 @@
     padding: 6px 12px;
     border: @default-border;
     box-sizing: border-box;
-    box-shadow: inset 0 1px 1px rgba(0,0,0,0.075), 0 0 0 rgba(0,0,0,0.5);
+    box-shadow: 0 1px 1px rgba(0,0,0,0.05);
     color: @gray-darkest;
 }
