--- a/src/topbar/topbar.less
+++ b/src/topbar/topbar.less
@@ -44,6 +44,7 @@
                 background-color: @success;
                 padding: 2px 5px;
                 border: 1px solid @gray-coal;
+                color: @white;
             }
 
             &.selected {
