multi-level-checkbox-editor (wip), two-box-multiselect

--- a/src/index.less
+++ b/src/index.less
@@ -2,6 +2,7 @@
 @import 'variables';
 
 @import 'button/button';
+@import 'checkbox/checkbox';
 @import 'checkbox-table/checkbox-table';
 @import 'dialog/dialog';
 @import 'form/form';
