--- a/src/two-box-multiselect/two-box-multiselect.less
+++ b/src/two-box-multiselect/two-box-multiselect.less
@@ -18,28 +18,31 @@
         width: 45%;
 
         .two-box-multiselect-label {
-            font-weight: bold;
             margin-bottom: 10px;
         }
 
         .two-box-multiselect-select-box {
             border: @default-border;
             background: @white;
+            box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
 
             .two-box-multiselect-filter-bar {
                 @border-gap: 10px;
 
                 display: flex;
-                width: calc(100% - (2*@border-gap));
-                margin-left: @border-gap;
+                width: 100%;
+                padding: 0 5px;
                 margin-bottom: 5px;
 
+                color: @gray-darker;
                 border-bottom: @default-border;
 
                 .two-box-multiselect-filter-icon {
                     @two-box-filter-icon();
                     font-size: 14px;
                     padding-top: 3px;
+                    padding-right: 5px;
+                    padding-left: 3px;
                     line-height: 30px;
                 }
 
@@ -68,7 +71,7 @@
                 }
 
                 .item {
-                    padding: 7px 10px 7px 10px;
+                    padding: 7px 10px 7px 28px;
                     overflow: hidden;
                     white-space: nowrap;
                     text-overflow: ellipsis;
@@ -108,13 +111,15 @@
             };
 
             .action-button {
-                width: 26px;
-                height: 26px;
+                width: 34px;
+                height: 30px;
                 margin-bottom: 10px;
+                padding: 5px;
 
-                background-color: transparent;
+                background-color: @white;
+                color: @info-dark;
                 cursor: pointer;
-                border: none;
+                border: 1px solid @info-dark;
 
                 &:focus {
                     outline: none;
@@ -130,30 +135,31 @@
             }
 
             .remove-buttons {
+                margin-top: 10px;
                 @button-container();
             }
 
             .add-all {
                 line-height: 26px;
-                font-size: 17px;
+                font-size: 14px;
                 @two-box-add-all();
             }
 
             .add-highlighted {
                 line-height: 26px;
-                font-size: 17px;
+                font-size: 14px;
                 @two-box-add-highlighted();
             }
 
             .remove-highlighted {
                 line-height: 26px;
-                font-size: 17px;
+                font-size: 14px;
                 @two-box-remove-highlighted();
             }
 
             .remove-all {
                 line-height: 26px;
-                font-size: 17px;
+                font-size: 14px;
                 @two-box-remove-all();
             }
         }
