--- a/src/form/form-group.less
+++ b/src/form/form-group.less
@@ -31,6 +31,7 @@
             .form-group-icon {
                 font-size: 12px;
                 margin-left: 10px;
+                padding-right: 10px;
             }
 
             &:focus {
@@ -43,11 +44,10 @@
         padding: 15px 0 15px 60px;
     }
 
-    &.group-valid {
+    &.group-unchanged {
         .form-group-icon {
-            @success-icon();
-            color: @success;
-            padding-right: 10px;
+            @unchanged-icon();
+            color: @gray-mid;
         }
     }
 
@@ -55,7 +55,6 @@
         .form-group-icon {
             @error-icon();
             color: @error;
-            padding-right: 10px;
         }
     }
 
