--- a/src/multi-level-checkbox-editor/multi-level-checkbox-editor.less
+++ b/src/multi-level-checkbox-editor/multi-level-checkbox-editor.less
@@ -60,8 +60,18 @@
 
                 display: flex;
                 justify-content: space-between;
-                align-items: baseline;
+                align-items: center;
                 cursor: pointer;
+                white-space: pre-line;
+
+                div {
+                    display: flex;
+                    align-items: center;
+
+                    label {
+                        margin-bottom: 0;
+                    }
+                }
 
                 &:not(:first-child) {
                     border-top: @default-border;
