Form violations update and minor changes

--- a/src/variables.less
+++ b/src/variables.less
@@ -16,6 +16,7 @@
 @info-light: #E4F3FF;
 @info-lighter: #8CC4E0;
 @info: #28B7FF;
+@info-deep: #9765C3;
 @info-dark: #0592D9;
 @info-darker: #0077B3;
 
