--- a/src/form/form.less
+++ b/src/form/form.less
@@ -16,7 +16,8 @@
 
     .error {
         input[type='text'], textarea {
-            border-color: @error !important;
+            border-color: @error;
+            box-shadow: none;
         }
     }
 
