--- a/src/input/input.less
+++ b/src/input/input.less
@@ -20,8 +20,7 @@
     }
 
     input:focus {
-        box-shadow: none;
+        box-shadow: 0 0 1px fade(@info, 50%);
         outline: none;
-        border-color: @success;
     }
 }
